Support non-body container element

--- a/x.html
+++ b/x.html
@@ -6,12 +6,13 @@
     <title>Three.JS Page Curl</title>
     <style>
         body { margin: 0; overflow: hidden; }
-        #html-content {
-            width: 100vw; 
-            height: 100vh; 
-            position: relative; 
+        #curl-container {
+            position: relative;
+            width: 100vw;
+            height: 100vh;
             overflow: hidden;
-            z-index: 1;
+        }
+        #html-content {
             display: flow-root; /* Prevent child margins from collapsing outside */
         }
     </style>
