--- a/x.html
+++ b/x.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.JS Page Curl</title>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { margin: 0; height: 100vh; overflow: hidden; }
         #curl-container {
             position: relative;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
         }
         #html-content {
             display: flow-root; /* Prevent child margins from collapsing outside */
@@ -20,10 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js"></script>
 </head>
 <body>
-    <div id="curl-container">
-        <div id="html-content"></div>
-        <!-- Canvas will be appended here by JS -->
-    </div>
+    <div id="html-content"></div>
 
     <script type="importmap">
         {
@@ -34,7 +28,7 @@
         }
     </script>
     <script type="module">
-        import { curl } from './main.js';
+        import { curl, captureScreenshotOfParentElement } from './main.js';
         // The 'go' function will be attached to the window object by the init() function from main.js
         const htmlContentDiv = document.getElementById('html-content');
         let redHTMLBodyContent = '';
@@ -56,7 +50,8 @@
 
         // Set up the go function to be called later
         window.go = async () => {
-            await curl(htmlContentDiv, blueHTMLBodyContent, {logging: true});
+            const screenshotCanvas = await captureScreenshotOfParentElement(htmlContentDiv, html2canvas, {logging: true});
+            await curl(htmlContentDiv, screenshotCanvas, (el) => el.innerHTML = blueHTMLBodyContent, {logging: true});
             console.log("Curl complete.");
         }
     </script>
