--- a/x.html
+++ b/x.html
@@ -19,6 +19,13 @@
 <body>
     <div id="html-content"></div>
 
+    <!-- Or, for example, wrap the content in a curl container.
+     Remember to set `position: relative;` on the curl container!
+    <div id="curl-container">
+        <div id="html-content"></div>
+    </div>
+    -->
+
     <script type="importmap">
         {
             "imports": {
@@ -32,24 +39,25 @@
         import { curl, captureScreenshotOfParentElement } from './main.js';
         // The 'go' function will be attached to the window object by the init() function from main.js
         const htmlContentDiv = document.getElementById('html-content');
-        let redHTMLBodyContent = '';
-        let blueHTMLBodyContent = '';
-        try {
-            const redResponse = await fetch('red.html');
-            if (!redResponse.ok) throw new Error(`HTTP error loading red.html: ${redResponse.status}`);
-            redHTMLBodyContent = await redResponse.text().then(text => new DOMParser().parseFromString(text, 'text/html').body.innerHTML);
+        let redHTMLBodyContent = `<p><button onclick="window.go()">Curl!</button></p>` + `<p style="color: red;">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </p>`.repeat(20);
+        let blueHTMLBodyContent = `<p style="color: blue;">
+            Extraordinary lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+        </p>`.repeat(20);
+        
+        htmlContentDiv.innerHTML = redHTMLBodyContent;
 
-            const blueResponse = await fetch('blue.html');
-            if (!blueResponse.ok) throw new Error(`HTTP error loading blue.html: ${blueResponse.status}`);
-            blueHTMLBodyContent = await blueResponse.text().then(text => new DOMParser().parseFromString(text, 'text/html').body.innerHTML);
-            
-            htmlContentDiv.innerHTML = redHTMLBodyContent;
-        } catch (error) {
-            console.error("Error loading HTML content:", error);
-            htmlContentDiv.innerHTML = '<p style="color:red;">Error loading initial content.</p>';
-        }
-
-        // Set up the go function to be called later
         window.go = async () => {
             const screenshotCanvas = await captureScreenshotOfParentElement(htmlContentDiv, html2canvas, {logging: true});
             await curl({
