Add duration to example

--- a/example.html
+++ b/example.html
@@ -55,6 +55,7 @@
                 element: htmlContentDiv,
                 screenshotCanvas: screenshotCanvas,
                 nextPageContent: blueHTMLBodyContent,
+                durationInMs: 1000,
                 logging: true
             });
             console.log("Curl complete.");
