simplify curl-container example

--- a/example.html
+++ b/example.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three.JS Page Curl</title>
     <style>
-        body { margin: 0; height: 100vh; overflow: hidden; }
+        body {
+            overflow: hidden;
+            height: 100vh;
+        }
         #curl-container {
             position: relative;
             width: 50vw;
