--- a/example.html
+++ b/example.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Three.JS Page Curl</title>
     <style>
-        body {
-            overflow: hidden;
-            height: 100vh;
-        }
-        #curl-container {
-            position: relative;
-            width: 50vw;
-            height: 50vw;
-            overflow: hidden;
-        }
-        #html-content {
-            display: flow-root; /* Prevent child margins from collapsing outside */
-        }
+      body {
+        overflow: hidden;
+        height: 100vh;
+      }
+      #curl-container {
+        position: relative;
+        width: 50vw;
+        height: 50vw;
+        overflow: hidden;
+      }
+      #html-content {
+        display: flow-root; /* Prevent child margins from collapsing outside */
+      }
     </style>
     <!-- html2canvas library -->
-</head>
-<body>
+  </head>
+  <body>
     <div id="html-content"></div>
 
     <!-- Or, for example, wrap the content in a curl container.
@@ -33,11 +33,13 @@
     -->
 
     <script type="module">
-        import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
-        import html2canvas from 'https://esm.sh/html2canvas';
-        import { curl, captureScreenshotOfParentElement } from './webgl-page-curl.js';
-        const htmlContentDiv = document.getElementById('html-content');
-        let redHTMLBodyContent = `<p><button onclick="window.go()">Curl!</button></p>` + `<p style="color: red;">
+      import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
+      import html2canvas from 'https://esm.sh/html2canvas';
+      import { curl, captureScreenshotOfParentElement } from './webgl-page-curl.js';
+      const htmlContentDiv = document.getElementById('html-content');
+      let redHTMLBodyContent =
+        `<p><button onclick="window.go()">Curl!</button></p>` +
+        `<p style="color: red;">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -45,7 +47,7 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </p>`.repeat(20);
-        let blueHTMLBodyContent = `<p style="color: blue;">
+      let blueHTMLBodyContent = `<p style="color: blue;">
             Extraordinary lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -53,21 +55,26 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </p>`.repeat(20);
-        
-        htmlContentDiv.innerHTML = redHTMLBodyContent;
 
-        window.go = async () => {
-            const screenshotCanvas = await captureScreenshotOfParentElement(htmlContentDiv, html2canvas, {logging: true});
-            await curl({
-                THREE: THREE,
-                element: htmlContentDiv,
-                screenshotCanvas: screenshotCanvas,
-                nextPageContent: blueHTMLBodyContent,
-                durationInMs: 1000,
-                logging: true
-            });
-            console.log("Curl complete.");
-        }
+      htmlContentDiv.innerHTML = redHTMLBodyContent;
+
+      window.go = async () => {
+        const screenshotCanvas = await captureScreenshotOfParentElement(
+          htmlContentDiv,
+          html2canvas,
+          { logging: true }
+        );
+        await curl({
+          THREE: THREE,
+          element: htmlContentDiv,
+          screenshotCanvas: screenshotCanvas,
+          nextPageContent: blueHTMLBodyContent,
+          durationInMs: 5000,
+          curlTargetAmount: 1.0,
+          logging: true,
+        });
+        console.log('Curl complete.');
+      };
     </script>
-</body>
+  </body>
 </html>
