--- a/example.html
+++ b/example.html
@@ -32,7 +32,7 @@
 
     <script type="module">
       import html2canvas from 'https://esm.sh/html2canvas';
-      import { curl, captureScreenshotOfParentElement } from './webgl-page-curl.js';
+      import { curl, captureScreenshotOfParentElement } from './dist/webgl-page-curl.js';
       const htmlContentDiv = document.getElementById('html-content');
       let redHTMLBodyContent =
         `<p><button onclick="window.go()">Curl!</button></p>` +
