Support configurable start/end points

--- a/example.html
+++ b/example.html
@@ -65,6 +65,8 @@
           element: document.body,
           screenshotCanvas: screenshotCanvas,
           nextPageContent: blueHTMLBodyContent,
+          curlRadius: 0.2,
+          endX: 0.8,
           durationInMs: 1000,
           logging: true,
         });
